--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,9 @@ dist/
 # Environment variables
 .env
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.production
+env.local
+env.production
 
 # Logs
 logs
