--- a/package.json
+++ b/package.json
@@ -8,7 +8,16 @@
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
     "clean": "rm -rf dist",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "docker:build": "docker build -t jam-band-be .",
+    "docker:run": "docker run -p 3001:3001 jam-band-be",
+    "docker:dev": "docker-compose up --build",
+    "docker:dev:detach": "docker-compose up -d --build",
+    "docker:stop": "docker-compose down",
+    "railway:deploy": "railway up",
+    "railway:logs": "railway logs",
+    "railway:status": "railway status",
+    "railway:login": "railway login"
   },
   "keywords": ["express", "typescript", "backend", "jam-band"],
   "author": "",
@@ -28,5 +37,8 @@
     "selfsigned": "^3.0.1",
     "tsx": "^4.6.2",
     "typescript": "^5.3.3"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
