--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,33 +9,38 @@ on:
 jobs:
   deploy-backend:
     runs-on: ubuntu-latest
-    
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-      
+
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
         node-version: '20'
-        
+
     - name: Setup Bun
       uses: oven-sh/setup-bun@v1
       with:
         bun-version: latest
-        
+
     - name: Install dependencies
       run: bun install --frozen-lockfile
-      
+
     - name: Run type check
       run: bun run type-check
-      
+
     - name: Build project
       run: bun run build
-      
+
+    - name: Install Railway CLI
+      run: npm install -g @railway/cli
+
     - name: Deploy to Railway
       if: github.ref == 'refs/heads/main'
-      uses: bervProject/railway-deploy@v1.0.0
-      with:
-        railway_token: ${{ secrets.RAILWAY_TOKEN }}
-        service: ${{ secrets.RAILWAY_SERVICE }} 
+      run: |
+        echo ${{ secrets.RAILWAY_TOKEN }} | railway login
+        railway up --service ${{ secrets.RAILWAY_SERVICE }}
+      env:
+        RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
+        RAILWAY_SERVICE: ${{ secrets.RAILWAY_SERVICE }} 
