Refactor deployment workflow to use Railway deploy action instead of CLI commands, enhancing simplicity and security. Update CORS middleware to allow multiple origins in production, improving flexibility for frontend integration.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,14 +33,9 @@ jobs:
     - name: Build project
       run: bun run build
 
-    - name: Install Railway CLI
-      run: npm install -g @railway/cli
-
     - name: Deploy to Railway
       if: github.ref == 'refs/heads/main'
-      run: |
-        railway up --service ${{ secrets.RAILWAY_SERVICE }}
-      env:
-        RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
-        RAILWAY_PROJECT_ID: ${{ secrets.RAILWAY_PROJECT_ID }}
-        RAILWAY_SERVICE: ${{ secrets.RAILWAY_SERVICE }} 
+      uses: railway/deploy@v1
+      with:
+        service: ${{ secrets.RAILWAY_SERVICE }}
+        token: ${{ secrets.RAILWAY_TOKEN }} 
