--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "dist/index.js",
   "scripts": {
     "start": "node dist/index.js",
-    "dev": "tsx watch src/index.ts",
+    "start:prod": "NODE_ENV=production node --max-old-space-size=2048 dist/index.js",
+    "start:dev": "tsx watch src/index.ts",
+    "start:dev:gc": "NODE_ENV=development ENABLE_GC=true tsx watch src/index.ts",
     "build": "tsc",
     "clean": "rm -rf dist",
     "type-check": "tsc --noEmit",
@@ -23,12 +25,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/compression": "^1.8.1",
+    "@types/node-cache": "^4.2.5",
+    "compression": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
+    "joi": "^17.11.0",
+    "node-cache": "^5.1.2",
     "socket.io": "^4.8.1",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "winston": "^3.11.0",
+    "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
