Refactor CORS configuration and validation handling: Simplified CORS setup by introducing a single FRONTEND_URL for both local and production environments. Removed legacy multiple origin handling and validation schemas for musical events to enhance performance. Updated middleware to reflect these changes and improve logging for CORS requests.

--- a/env.local.example
+++ b/env.local.example
@@ -10,17 +10,9 @@ SSL_ENABLED=false
 SSL_KEY_PATH=.selfsigned/key.pem
 SSL_CERT_PATH=.selfsigned/cert.pem
 
-# CORS Configuration
-# Single origin (legacy support)
-CORS_ORIGIN=*
-
-# Multiple allowed origins (comma-separated)
-# Use this for production or strict development mode
-ALLOWED_ORIGINS=https://jam-band-fe.vercel.app,https://yourdomain.com
-
-# Development origins (comma-separated)
-# These are always allowed in development mode when strict mode is enabled
-DEVELOPMENT_ORIGINS=http://localhost:5173,http://localhost:3000,http://localhost:8080
+# CORS Configuration - Simplified
+# Single frontend URL for CORS (use your local frontend URL)
+FRONTEND_URL=https://192.168.1.95:5173
 
 # CORS strict mode (true = strict, false = flexible)
 # When true, only specified origins are allowed even in development
