--- a/env.production.example
+++ b/env.production.example
@@ -11,16 +11,8 @@ SSL_KEY_PATH=
 SSL_CERT_PATH=
 
 # CORS Configuration - PRODUCTION SECURITY
-# IMPORTANT: Only allow your actual frontend domains
-# Single origin (legacy support)
-CORS_ORIGIN=https://jam-band-fe.vercel.app
-
-# Multiple allowed origins (comma-separated)
-# Only include your actual production domains
-ALLOWED_ORIGINS=https://jam-band-fe.vercel.app,https://yourdomain.com
-
-# Development origins (not used in production but kept for consistency)
-DEVELOPMENT_ORIGINS=http://localhost:5173,http://localhost:3000
+# Single frontend URL for CORS
+FRONTEND_URL=https://jam-band-fe.vercel.app
 
 # CORS strict mode (always true in production for security)
 CORS_STRICT_MODE=true
