Enhance voice rate limiting and documentation: Added configurable rate limits for voice events in the environment configuration, updated middleware to support intelligent recovery mechanisms, and expanded README with detailed voice rate limiting guidelines and troubleshooting tips. This improves system stability and user experience during high-traffic scenarios.

--- a/env.local.example
+++ b/env.local.example
@@ -40,4 +40,10 @@ MAX_CONNECTIONS=1000
 ENABLE_GC=false
 CONNECTION_TIMEOUT=1800000
 CLEANUP_INTERVAL=300000
-DISABLE_SYNTH_RATE_LIMIT=true 
+DISABLE_SYNTH_RATE_LIMIT=true
+DISABLE_VOICE_RATE_LIMIT=false
+
+# Voice Rate Limiting (events per minute per user)
+VOICE_OFFER_RATE_LIMIT=60
+VOICE_ANSWER_RATE_LIMIT=60
+VOICE_ICE_RATE_LIMIT=200 
