Refactor environment configuration: Updated CORS settings to remove legacy comments, streamlined performance configuration by removing unused parameters, and added voice rate limiting settings in production environment. This enhances clarity and maintainability of configuration files.

--- a/env.local.example
+++ b/env.local.example
@@ -10,7 +10,7 @@ SSL_ENABLED=false
 SSL_KEY_PATH=.selfsigned/key.pem
 SSL_CERT_PATH=.selfsigned/cert.pem
 
-# CORS Configuration - Simplified
+# CORS Configuration
 # Single frontend URL for CORS (use your local frontend URL)
 FRONTEND_URL=https://192.168.1.95:5173
 
@@ -25,21 +25,10 @@ CORS_CREDENTIALS=true
 WEBRTC_ENABLED=true
 WEBRTC_REQUIRE_HTTPS=false
 
-# Railway Configuration (for deployment)
-RAILWAY_URL=
-RAILWAY_SERVICE=
-
 # Logging Configuration
-LOG_LEVEL=info 
+LOG_LEVEL=info
 
 # Performance Configuration
-ENABLE_COMPRESSION=true
-ENABLE_CACHING=true
-CACHE_TTL=300
-MAX_CONNECTIONS=1000
-ENABLE_GC=false
-CONNECTION_TIMEOUT=1800000
-CLEANUP_INTERVAL=300000
 DISABLE_SYNTH_RATE_LIMIT=true
 DISABLE_VOICE_RATE_LIMIT=false
 
