--- a/env.production.example
+++ b/env.production.example
@@ -24,19 +24,14 @@ CORS_CREDENTIALS=true
 WEBRTC_ENABLED=true
 WEBRTC_REQUIRE_HTTPS=true
 
-# Railway Configuration
-RAILWAY_URL=https://your-app.railway.app
-RAILWAY_SERVICE=jam-band-backend
-
 # Logging Configuration
-LOG_LEVEL=warn 
+LOG_LEVEL=warn
 
 # Performance Configuration
-ENABLE_COMPRESSION=true
-ENABLE_CACHING=true
-CACHE_TTL=600
-MAX_CONNECTIONS=2000
-ENABLE_GC=false
-CONNECTION_TIMEOUT=1800000
-CLEANUP_INTERVAL=300000
-DISABLE_SYNTH_RATE_LIMIT=false 
+DISABLE_SYNTH_RATE_LIMIT=false
+DISABLE_VOICE_RATE_LIMIT=false
+
+# Voice Rate Limiting (events per minute per user)
+VOICE_OFFER_RATE_LIMIT=60
+VOICE_ANSWER_RATE_LIMIT=60
+VOICE_ICE_RATE_LIMIT=200 
