Add SSL generation script and update environment configuration: Introduced a script to generate self-signed SSL certificates for local development and updated environment files to reflect new SSL paths and configurations.

--- a/env.local.example
+++ b/env.local.example
@@ -1,38 +1,44 @@
-# Local Development Environment Variables
-# Copy this file to .env.local and modify as needed
+# Local development environment variables
+# Copy this file to .env.local and edit values locally.
 
-# Server Configuration
+# Server configuration
 NODE_ENV=development
 PORT=3001
 
-# SSL Configuration (for WebRTC in development)
-SSL_ENABLED=false
-SSL_KEY_PATH=.selfsigned/key.pem
-SSL_CERT_PATH=.selfsigned/cert.pem
+# SSL (used for local WebRTC if enabled)
+# Set SSL_ENABLED to true when using local certs (example .ssl/server.key/.ssl/server.crt)
+SSL_ENABLED=true
+SSL_KEY_PATH=.ssl/server.key
+SSL_CERT_PATH=.ssl/server.crt
 
-# CORS Configuration
-# Single frontend URL for CORS (use your local frontend URL)
-FRONTEND_URL=https://192.168.1.95:5173
-
-# CORS strict mode (true = strict, false = flexible)
-# When true, only specified origins are allowed even in development
+# CORS / Frontend
+# FRONTEND_URL is used to build CORS/Socket origins; use your local frontend URL
+FRONTEND_URL=https://localhost:5173
+# When true, only the explicit FRONTEND_URL (and developmentOrigins in code) are allowed
 CORS_STRICT_MODE=false
-
-# CORS credentials
+# Allow cookies/auth in CORS (true/false)
 CORS_CREDENTIALS=true
 
-# WebRTC Configuration
+# WebRTC settings
 WEBRTC_ENABLED=true
+# In development you can disable requiring HTTPS for WebRTC
 WEBRTC_REQUIRE_HTTPS=false
 
-# Logging Configuration
-LOG_LEVEL=info
+# Logging
+LOG_LEVEL=debug
 
-# Performance Configuration
+# Performance tuning
+MAX_CONCURRENT_CONNECTIONS=1000
+CONNECTION_TIMEOUT=30000
+HEARTBEAT_INTERVAL=30000
+
+# Feature flags / rate limiting
+# When true, synth parameter rate limiting is disabled
 DISABLE_SYNTH_RATE_LIMIT=true
+# When true, voice-event rate limiting is disabled
 DISABLE_VOICE_RATE_LIMIT=false
 
-# Voice Rate Limiting (events per minute per user)
+# Voice event rate limits (events per minute per user)
 VOICE_OFFER_RATE_LIMIT=60
 VOICE_ANSWER_RATE_LIMIT=60
-VOICE_ICE_RATE_LIMIT=200 
+VOICE_ICE_RATE_LIMIT=200
