--- a/env.production.example
+++ b/env.production.example
@@ -1,37 +1,30 @@
-# Production Environment Variables
-# Copy this file to env.production and modify with your actual values
+# Production environment variables
+# Copy or provide these values in your production environment (e.g., hosting platform secrets)
 
-# Server Configuration
 NODE_ENV=production
 PORT=3001
 
-# SSL Configuration (Railway handles SSL termination)
+# SSL: in many PaaS environments SSL is terminated upstream. If running behind a proxy that
+# does not handle TLS, set SSL_ENABLED=true and provide key/cert paths accessible to the app.
 SSL_ENABLED=false
 SSL_KEY_PATH=
 SSL_CERT_PATH=
 
-# CORS Configuration - PRODUCTION SECURITY
-# Single frontend URL for CORS
-FRONTEND_URL=https://jam-band-fe.vercel.app
-
-# CORS strict mode (always true in production for security)
+# Frontend origin for CORS (set to your deployed frontend)
+FRONTEND_URL=https://your-production-frontend.com
 CORS_STRICT_MODE=true
-
-# CORS credentials
 CORS_CREDENTIALS=true
 
-# WebRTC Configuration
+# WebRTC should require HTTPS in production
 WEBRTC_ENABLED=true
 WEBRTC_REQUIRE_HTTPS=true
 
-# Logging Configuration
+# Logging level for production (error|warn|info)
 LOG_LEVEL=warn
 
-# Performance Configuration
+# Performance and rate limiting
 DISABLE_SYNTH_RATE_LIMIT=false
 DISABLE_VOICE_RATE_LIMIT=false
-
-# Voice Rate Limiting (events per minute per user)
 VOICE_OFFER_RATE_LIMIT=60
 VOICE_ANSWER_RATE_LIMIT=60
-VOICE_ICE_RATE_LIMIT=200 
+VOICE_ICE_RATE_LIMIT=200
