Refactor and enhance approval session management: Introduced ApprovalSessionManager for handling user approval sessions in rooms, added validation schemas for approval requests, and integrated approval handling in RoomHandlers. Updated environment configuration for performance monitoring and added new performance-related routes. Implemented comprehensive tests for approval session functionality and performance monitoring services.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,9 @@
     "target": "ES2022",
     "module": "commonjs",
     "lib": ["ES2022"],
+    "types": ["node", "jest"],
     "outDir": "./dist",
-    "rootDir": "./src",
+    "rootDir": "./",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
@@ -27,6 +28,6 @@
       "@/*": ["*"]
     }
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "tests/**/*"],
   "exclude": ["node_modules", "dist"]
 } 
