--- a/env.local.example
+++ b/env.local.example
@@ -1,44 +1,21 @@
-# Local development environment variables
-# Copy this file to .env.local and edit values locally.
+# Security
+JWT_SECRET=your-secret-key
+RATE_LIMIT_WINDOW_MS=60000
+RATE_LIMIT_MAX_REQUESTS=100
 
-# Server configuration
-NODE_ENV=development
-PORT=3001
-
-# SSL (used for local WebRTC if enabled)
-# Set SSL_ENABLED to true when using local certs (example .ssl/server.key/.ssl/server.crt)
-SSL_ENABLED=true
-SSL_KEY_PATH=.ssl/server.key
-SSL_CERT_PATH=.ssl/server.crt
-
-# CORS / Frontend
-# FRONTEND_URL is used to build CORS/Socket origins; use your local frontend URL
-FRONTEND_URL=https://localhost:5173
-# When true, only the explicit FRONTEND_URL (and developmentOrigins in code) are allowed
-CORS_STRICT_MODE=false
-# Allow cookies/auth in CORS (true/false)
-CORS_CREDENTIALS=true
-
-# WebRTC settings
-WEBRTC_ENABLED=true
-# In development you can disable requiring HTTPS for WebRTC
-WEBRTC_REQUIRE_HTTPS=false
-
-# Logging
-LOG_LEVEL=debug
-
-# Performance tuning
-MAX_CONCURRENT_CONNECTIONS=1000
-CONNECTION_TIMEOUT=30000
-HEARTBEAT_INTERVAL=30000
-
-# Feature flags / rate limiting
-# When true, synth parameter rate limiting is disabled
+# Performance optimization
 DISABLE_SYNTH_RATE_LIMIT=true
-# When true, voice-event rate limiting is disabled
 DISABLE_VOICE_RATE_LIMIT=false
 
-# Voice event rate limits (events per minute per user)
-VOICE_OFFER_RATE_LIMIT=60
-VOICE_ANSWER_RATE_LIMIT=60
-VOICE_ICE_RATE_LIMIT=200
+# WebRTC Configuration
+WEBRTC_ENABLED=true
+WEBRTC_STUN_SERVERS=stun:stun.l.google.com:19302
+
+# SSL Configuration (Development)
+USE_SSL=false
+SSL_KEY_PATH=
+SSL_CERT_PATH=
+
+# Monitoring
+ENABLE_PERFORMANCE_MONITORING=true
+LOG_LEVEL=info
