--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "build": "tsc",
     "clean": "rm -rf dist",
     "type-check": "tsc --noEmit",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:ci": "jest --ci --coverage --watchAll=false",
     "docker:build": "docker build -t jam-band-be .",
     "docker:run": "docker run -p 3001:3001 jam-band-be",
     "docker:dev": "docker-compose up --build",
@@ -21,7 +25,12 @@
     "railway:status": "railway status",
     "railway:login": "railway login"
   },
-  "keywords": ["express", "typescript", "backend", "jam-band"],
+  "keywords": [
+    "express",
+    "typescript",
+    "backend",
+    "jam-band"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -33,6 +42,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
+    "jam-band-be": ".",
     "joi": "^17.11.0",
     "node-cache": "^5.1.2",
     "socket.io": "^4.8.1",
@@ -43,8 +53,13 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20.10.5",
+    "@types/socket.io-client": "^1.4.36",
+    "jest": "^30.0.5",
     "selfsigned": "^3.0.1",
+    "socket.io-client": "^4.8.1",
+    "ts-jest": "^29.4.1",
     "tsx": "^4.6.2",
     "typescript": "^5.3.3"
   },
