--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start:prod": "NODE_ENV=production node --max-old-space-size=2048 dist/index.js",
     "start:dev": "tsx watch src/index.ts",
     "start:dev:gc": "NODE_ENV=development ENABLE_GC=true tsx watch src/index.ts",
-    "build": "tsc",
+  "build": "tsc",
+  "lint": "eslint . --ext .ts",
+  "lint:fix": "eslint . --ext .ts --fix",
     "clean": "rm -rf dist",
     "type-check": "tsc --noEmit",
     "test": "jest",
@@ -62,18 +64,22 @@
     "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.36.0",
     "@types/bun": "^1.2.21",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^30.0.0",
     "@types/node": "^20.10.5",
     "@types/socket.io-client": "^1.4.36",
+    "eslint": "^9.36.0",
+    "globals": "^16.4.0",
     "jest": "^30.0.5",
     "selfsigned": "^3.0.1",
     "socket.io-client": "^4.8.1",
     "ts-jest": "^29.4.1",
     "tsx": "^4.6.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "typescript-eslint": "^8.45.0"
   },
   "engines": {
     "node": ">=18.0.0"
