feat(tests): add comprehensive test suite for room management and core functionality
- Implemented integration tests for room creation, user management, and room state management.
- Added regression tests to ensure existing functionality remains intact with new features.
- Created unit tests for RoomService methods, including room creation and effect chain management.
- Introduced TestLogger to manage console output during tests.
- Enhanced test setup with TestEnvironment and MockFactory for better isolation and mock handling.
- Developed TestUtils for common testing utilities, including performance measurement and data generation.
- Established performance regression tests to monitor room creation and user addition times.

--- a/package.json
+++ b/package.json
@@ -8,15 +8,22 @@
     "start:prod": "NODE_ENV=production node --max-old-space-size=2048 dist/index.js",
     "start:dev": "tsx watch src/index.ts",
     "start:dev:gc": "NODE_ENV=development ENABLE_GC=true tsx watch src/index.ts",
-  "build": "tsc",
-  "lint": "eslint . --ext .ts",
-  "lint:fix": "eslint . --ext .ts --fix",
+    "build": "tsc",
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --ext .ts --fix",
     "clean": "rm -rf dist",
     "type-check": "tsc --noEmit",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "test:ci": "jest --ci --coverage --watchAll=false",
+    "test:unit": "jest --selectProjects unit",
+    "test:integration": "jest --selectProjects integration",
+    "test:e2e": "jest --selectProjects e2e",
+    "test:regression": "jest tests/regression/",
+    "test:all": "npm run test:unit && npm run test:integration && npm run test:regression",
+    "test:changed": "jest --onlyChanged",
+    "test:related": "jest --findRelatedTests",
     "test:webrtc": "bun run scripts/test-webrtc-https.ts",
     "test:approval": "jest --testPathPatterns=ApprovalWorkflowHandler.test.ts --verbose",
     "test:https": "jest --testPathPatterns=HTTPSWebRTC.test.ts --verbose",
@@ -71,11 +78,13 @@
     "@types/jest": "^30.0.0",
     "@types/node": "^20.10.5",
     "@types/socket.io-client": "^1.4.36",
+    "@types/supertest": "^6.0.3",
     "eslint": "^9.36.0",
     "globals": "^16.4.0",
     "jest": "^30.0.5",
     "selfsigned": "^3.0.1",
     "socket.io-client": "^4.8.1",
+    "supertest": "^7.1.4",
     "ts-jest": "^29.4.1",
     "tsx": "^4.6.2",
     "typescript": "^5.3.3",
