--- a/package.json
+++ b/package.json
@@ -54,16 +54,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@ffprobe-installer/ffprobe": "^2.1.2",
     "@types/compression": "^1.8.1",
+    "@types/multer": "^2.0.0",
     "@types/node-cache": "^4.2.5",
     "compression": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
+    "fluent-ffmpeg": "^2.1.3",
     "helmet": "^7.1.0",
     "jam-band-be": ".",
     "joi": "^17.11.0",
+    "multer": "^2.0.2",
     "node-cache": "^5.1.2",
     "socket.io": "^4.8.1",
     "uuid": "^11.1.0",
@@ -75,6 +80,7 @@
     "@types/bun": "^1.2.21",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/fluent-ffmpeg": "^2.1.28",
     "@types/jest": "^30.0.0",
     "@types/node": "^20.10.5",
     "@types/socket.io-client": "^1.4.36",
