feat(database): add PostgreSQL configuration and analytics feedback schema
- Introduced a new docker-compose.yml file for PostgreSQL setup.
- Updated environment example files to include DATABASE_URL for local and production environments.
- Added Prisma schema and migration files for analytics and feedback models.
- Implemented analytics and feedback handling with corresponding routes and services.
- Enhanced CORS middleware to support additional headers for client timezone.

--- a/env.local.example
+++ b/env.local.example
@@ -19,3 +19,6 @@ SSL_CERT_PATH=
 # Monitoring
 ENABLE_PERFORMANCE_MONITORING=true
 LOG_LEVEL=info
+
+# Database
+DATABASE_URL=postgresql://user:password@localhost:5432/jamband?schema=public
