--- a/env.production.example
+++ b/env.production.example
@@ -28,3 +28,6 @@ DISABLE_VOICE_RATE_LIMIT=false
 VOICE_OFFER_RATE_LIMIT=60
 VOICE_ANSWER_RATE_LIMIT=60
 VOICE_ICE_RATE_LIMIT=200
+
+# Database
+DATABASE_URL=postgresql://user:password@host:5432/jamband?schema=public
