--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "helmet": "^7.1.0",
     "jam-band-be": ".",
     "joi": "^17.11.0",
+    "jszip": "^3.10.1",
     "multer": "^2.0.2",
     "node-cache": "^5.1.2",
     "socket.io": "^4.8.1",
@@ -82,6 +83,7 @@
     "@types/express": "^4.17.21",
     "@types/fluent-ffmpeg": "^2.1.28",
     "@types/jest": "^30.0.0",
+    "@types/jszip": "^3.4.1",
     "@types/node": "^20.10.5",
     "@types/socket.io-client": "^1.4.36",
     "@types/supertest": "^6.0.3",
