--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@ffprobe-installer/ffprobe": "^2.1.2",
+    "@prisma/client": "^6.19.0",
     "@types/compression": "^1.8.1",
     "@types/multer": "^2.0.0",
     "@types/node-cache": "^4.2.5",
@@ -74,7 +75,8 @@
     "socket.io": "^4.8.1",
     "uuid": "^11.1.0",
     "winston": "^3.11.0",
-    "winston-daily-rotate-file": "^4.7.1"
+    "winston-daily-rotate-file": "^4.7.1",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
@@ -90,6 +92,7 @@
     "eslint": "^9.36.0",
     "globals": "^16.4.0",
     "jest": "^30.0.5",
+    "prisma": "^6.19.0",
     "selfsigned": "^3.0.1",
     "socket.io-client": "^4.8.1",
     "supertest": "^7.1.4",
