--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "railway:deploy": "railway up",
     "railway:logs": "railway logs",
     "railway:status": "railway status",
-    "railway:login": "railway login"
+    "railway:login": "railway login",
+    "prepare": "husky"
   },
   "keywords": [
     "express",
@@ -89,6 +90,7 @@
     "@types/supertest": "^6.0.3",
     "eslint": "^9.36.0",
     "globals": "^16.4.0",
+    "husky": "^9.1.7",
     "jest": "^30.0.5",
     "selfsigned": "^3.0.1",
     "socket.io-client": "^4.8.1",
