--- a/env.local.example
+++ b/env.local.example
@@ -1,7 +1,26 @@
+# Database
+DATABASE_URL=postgresql://user:password@localhost:5432/jam_band_db
+
 # Security
 JWT_SECRET=your-secret-key
+JWT_EXPIRES_IN=7d
 RATE_LIMIT_WINDOW_MS=60000
 RATE_LIMIT_MAX_REQUESTS=100
+
+# Email Verification
+EMAIL_VERIFICATION_EXPIRES_HOURS=24
+PASSWORD_RESET_EXPIRES_HOURS=1
+
+# Email Configuration (Gmail)
+GMAIL_USER=your-email@gmail.com
+GMAIL_APP_PASSWORD=your-app-password
+
+# Google OAuth
+GOOGLE_CLIENT_ID=your-google-client-id
+GOOGLE_CLIENT_SECRET=your-google-client-secret
+
+# Frontend URL
+FRONTEND_URL=http://localhost:5173
 
 # Performance optimization
 DISABLE_SYNTH_RATE_LIMIT=true
