--- a/.env.example
+++ b/.env.example
@@ -32,5 +32,21 @@ HLS_CLEANUP_INTERVAL=300000
 # Audio Storage (optional - will auto-detect from FRONTEND_URL if not set)
 
 # DB
-DATABASE_URL=postgresql://
+DATABASE_URL=postgresql://user:password@localhost:5432/jam_band_db
 RAILWAY_VOLUME_MOUNT_PATH=/record-audio
+
+# Settings
+JWT_SECRET=your-secret-key
+JWT_EXPIRES_IN=7d
+
+# Email Verification
+EMAIL_VERIFICATION_EXPIRES_HOURS=24
+PASSWORD_RESET_EXPIRES_HOURS=1
+
+# Email Configuration (Gmail)
+GMAIL_USER=your-email@gmail.com
+GMAIL_APP_PASSWORD=your-app-password
+
+# Google OAuth
+GOOGLE_CLIENT_ID=your-google-client-id
+GOOGLE_CLIENT_SECRET=your-google-client-secret
