--- a/.env.example
+++ b/.env.example
@@ -37,7 +37,8 @@ RAILWAY_VOLUME_MOUNT_PATH=/record-audio
 
 # Settings
 JWT_SECRET=your-secret-key
-JWT_EXPIRES_IN=7d
+ACCESS_TOKEN_EXPIRES_IN=1h
+REFRESH_TOKEN_EXPIRES_IN=30d
 
 # Email Verification
 EMAIL_VERIFICATION_EXPIRES_HOURS=24
@@ -50,3 +51,12 @@ GMAIL_APP_PASSWORD=your-app-password
 # Google OAuth
 GOOGLE_CLIENT_ID=your-google-client-id
 GOOGLE_CLIENT_SECRET=your-google-client-secret
+
+# Backblaze B2 Storage Configuration (for user project files)
+BACKBLAZE_ENABLED=false
+BACKBLAZE_ACCESS_KEY_ID=
+BACKBLAZE_SECRET_ACCESS_KEY=
+BACKBLAZE_BUCKET_NAME=
+BACKBLAZE_ENDPOINT=
+BACKBLAZE_REGION=
+BACKBLAZE_PUBLIC_URL=
