--- a/package.json
+++ b/package.json
@@ -85,7 +85,9 @@
     "socket.io": "^4.8.1",
     "uuid": "^11.1.0",
     "winston": "^3.11.0",
-    "winston-daily-rotate-file": "^4.7.1"
+    "winston-daily-rotate-file": "^4.7.1",
+    "@aws-sdk/client-s3": "^3.700.0",
+    "@aws-sdk/s3-request-presigner": "^3.700.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
